--- a/webview-ui/src/i18n/locales/ru/settings.json
+++ b/webview-ui/src/i18n/locales/ru/settings.json
@@ -334,7 +334,7 @@
 		},
 		"zshOhMy": {
 			"label": "Включить интеграцию Oh My Zsh",
-			"description": "Если включено, устанавливает ITERM_SHELL_INTEGRATION_INSTALLED=Yes для поддержки функций интеграции Oh My Zsh. (экспериментально)"
+			"description": "Если включено, устанавливает ITERM_SHELL_INTEGRATION_INSTALLED=Yes для поддержки функций интеграции Oh My Zsh. Для применения этой настройки может потребоваться перезапуск IDE. (экспериментально)"
 		},
 		"zshP10k": {
 			"label": "Включить интеграцию Powerlevel10k",
