Add specific Kilo Code adjustments for cherry-picked Cline command

--- a/webview-ui/src/i18n/locales/ca/kilocode.json
+++ b/webview-ui/src/i18n/locales/ca/kilocode.json
@@ -18,5 +18,14 @@
 		"sections": {
 			"mcp": "Servidors MCP"
 		}
+	},
+	"chat": {
+		"condense": {
+			"wantsToCondense": "Kilo Code vol condensar la teva conversa",
+			"condenseConversation": "Condensar Conversa"
+		}
+	},
+	"newTaskPreview": {
+		"task": "Tasca"
 	}
 }
