--- a/webview-ui/src/i18n/locales/de/kilocode.json
+++ b/webview-ui/src/i18n/locales/de/kilocode.json
@@ -18,5 +18,14 @@
 		"sections": {
 			"mcp": "MCP-Server"
 		}
+	},
+	"chat": {
+		"condense": {
+			"wantsToCondense": "Kilo Code möchte deine Unterhaltung zusammenfassen",
+			"condenseConversation": "Unterhaltung zusammenfassen"
+		}
+	},
+	"newTaskPreview": {
+		"task": "Aufgabe"
 	}
 }
