--- a/webview-ui/src/i18n/locales/en/kilocode.json
+++ b/webview-ui/src/i18n/locales/en/kilocode.json
@@ -18,5 +18,14 @@
 		"sections": {
 			"mcp": "MCP Servers"
 		}
+	},
+	"chat": {
+		"condense": {
+			"wantsToCondense": "Kilo Code wants to condense your conversation",
+			"condenseConversation": "Condense Conversation"
+		}
+	},
+	"newTaskPreview": {
+		"task": "Task"
 	}
 }
