--- a/webview-ui/src/i18n/locales/es/kilocode.json
+++ b/webview-ui/src/i18n/locales/es/kilocode.json
@@ -18,5 +18,14 @@
 		"sections": {
 			"mcp": "Servidores MCP"
 		}
+	},
+	"chat": {
+		"condense": {
+			"wantsToCondense": "Kilo Code quiere condensar tu conversación",
+			"condenseConversation": "Condensar Conversación"
+		}
+	},
+	"newTaskPreview": {
+		"task": "Tarea"
 	}
 }
