--- a/webview-ui/src/i18n/locales/pl/kilocode.json
+++ b/webview-ui/src/i18n/locales/pl/kilocode.json
@@ -18,5 +18,14 @@
 		"sections": {
 			"mcp": "Serwery MCP"
 		}
+	},
+	"chat": {
+		"condense": {
+			"wantsToCondense": "Kilo Code chce skondensować Twoją rozmowę",
+			"condenseConversation": "Skondensuj Rozmowę"
+		}
+	},
+	"newTaskPreview": {
+		"task": "Zadanie"
 	}
 }
