--- a/webview-ui/src/i18n/locales/vi/kilocode.json
+++ b/webview-ui/src/i18n/locales/vi/kilocode.json
@@ -18,5 +18,14 @@
 		"sections": {
 			"mcp": "Máy chủ MCP"
 		}
+	},
+	"chat": {
+		"condense": {
+			"wantsToCondense": "Kilo Code muốn tóm tắt cuộc trò chuyện của bạn",
+			"condenseConversation": "Tóm tắt cuộc trò chuyện"
+		}
+	},
+	"newTaskPreview": {
+		"task": "Nhiệm vụ"
 	}
 }
