--- a/webview-ui/src/i18n/locales/fr/kilocode.json
+++ b/webview-ui/src/i18n/locales/fr/kilocode.json
@@ -27,5 +27,16 @@
 	},
 	"newTaskPreview": {
 		"task": "Tâche"
+	},
+	"profile": {
+		"dashboard": "Tableau de bord",
+		"logOut": "Se déconnecter",
+		"currentBalance": "SOLDE ACTUEL",
+		"loading": "Chargement...",
+		"signUp": {
+			"title": "S'inscrire à Kilo Code",
+			"description": "S'inscrire à Kilo Code vous donne des crédits gratuits pour commencer. Utilisez vos crédits pour explorer nos fonctionnalités, essayer les modèles les plus récents et les meilleurs, et découvrir les avantages de Kilo Code sans engagement.",
+			"termsAndPrivacy": "En continuant, vous acceptez les <termsLink>Conditions de Service</termsLink> et la <privacyLink>Politique de Confidentialité.</privacyLink>"
+		}
 	}
 }
