--- a/webview-ui/src/i18n/locales/hi/kilocode.json
+++ b/webview-ui/src/i18n/locales/hi/kilocode.json
@@ -27,5 +27,16 @@
 	},
 	"newTaskPreview": {
 		"task": "कार्य"
+	},
+	"profile": {
+		"dashboard": "डैशबोर्ड",
+		"logOut": "लॉग आउट",
+		"currentBalance": "वर्तमान बैलेंस",
+		"loading": "लोड हो रहा है...",
+		"signUp": {
+			"title": "Kilo Code में साइन अप करें",
+			"description": "Kilo Code में साइन अप करने से आपको शुरुआत के लिए मुफ्त क्रेडिट मिलते हैं। अपने क्रेडिट का उपयोग करके हमारी सुविधाओं का अन्वेषण करें, नवीनतम और सर्वोत्तम मॉडल आज़माएं, और बिना किसी प्रतिबद्धता के Kilo Code के लाभों का अनुभव करें।",
+			"termsAndPrivacy": "जारी रखकर, आप <termsLink>सेवा की शर्तों</termsLink> और <privacyLink>गोपनीयता नीति</privacyLink> से सहमत होते हैं।"
+		}
 	}
 }
