--- a/webview-ui/src/i18n/locales/it/kilocode.json
+++ b/webview-ui/src/i18n/locales/it/kilocode.json
@@ -27,5 +27,16 @@
 	},
 	"newTaskPreview": {
 		"task": "Attività"
+	},
+	"profile": {
+		"dashboard": "Dashboard",
+		"logOut": "Disconnetti",
+		"currentBalance": "SALDO ATTUALE",
+		"loading": "Caricamento...",
+		"signUp": {
+			"title": "Registrati a Kilo Code",
+			"description": "Registrandoti a Kilo Code ottieni crediti gratuiti per iniziare. Usa i tuoi crediti per esplorare le nostre funzionalità, provare i modelli più recenti e migliori, e sperimentare i vantaggi di Kilo Code senza impegno.",
+			"termsAndPrivacy": "Continuando, accetti i <termsLink>Termini di Servizio</termsLink> e la <privacyLink>Politica sulla Privacy.</privacyLink>"
+		}
 	}
 }
