--- a/webview-ui/src/i18n/locales/ja/kilocode.json
+++ b/webview-ui/src/i18n/locales/ja/kilocode.json
@@ -27,5 +27,16 @@
 	},
 	"newTaskPreview": {
 		"task": "タスク"
+	},
+	"profile": {
+		"dashboard": "ダッシュボード",
+		"logOut": "ログアウト",
+		"currentBalance": "現在の残高",
+		"loading": "読み込み中...",
+		"signUp": {
+			"title": "Kilo Codeにサインアップ",
+			"description": "Kilo Codeにサインアップすると、開始するための無料クレジットが提供されます。クレジットを使用して機能を探索し、最新で最高のモデルを試し、コミットメントなしでKilo Codeの利点を体験してください。",
+			"termsAndPrivacy": "続行することで、<termsLink>利用規約</termsLink>および<privacyLink>プライバシーポリシー</privacyLink>に同意したものとみなされます。"
+		}
 	}
 }
