--- a/webview-ui/src/i18n/locales/ru/kilocode.json
+++ b/webview-ui/src/i18n/locales/ru/kilocode.json
@@ -27,5 +27,16 @@
 	},
 	"newTaskPreview": {
 		"task": "Задача"
+	},
+	"profile": {
+		"dashboard": "Панель управления",
+		"logOut": "Выйти",
+		"currentBalance": "ТЕКУЩИЙ БАЛАНС",
+		"loading": "Загрузка...",
+		"signUp": {
+			"title": "Зарегистрироваться в Kilo Code",
+			"description": "Регистрация в Kilo Code дает вам бесплатные кредиты для начала работы. Используйте свои кредиты для изучения наших функций, опробования новейших и лучших моделей и получения преимуществ Kilo Code без обязательств.",
+			"termsAndPrivacy": "Продолжая, вы соглашаетесь с <termsLink>Условиями обслуживания</termsLink> и <privacyLink>Политикой конфиденциальности.</privacyLink>"
+		}
 	}
 }
