--- a/webview-ui/src/i18n/locales/ru/settings.json
+++ b/webview-ui/src/i18n/locales/ru/settings.json
@@ -435,6 +435,10 @@
 			"name": "Использовать экспериментальный режим \"power steering\"",
 			"description": "Если включено, Kilo Code будет чаще напоминать модели детали текущего режима. Это приведёт к более строгому следованию ролям и инструкциям, но увеличит расход токенов."
 		},
+		"REFACTOR_CODE": {
+			"name": "Включить экспериментальный инструмент refactor_code",
+			"description": "При включении Kilo Code предоставляет LLM инструмент refactor_code, который может ускорить операции рефакторинга. Пока только для Typescript/Javascript."
+		},
 		"MULTI_SEARCH_AND_REPLACE": {
 			"name": "Использовать экспериментальный мультиблочный инструмент диффа",
 			"description": "Если включено, Kilo Code будет использовать мультиблочный инструмент диффа, пытаясь обновить несколько блоков кода за один запрос."
