--- a/webview-ui/src/i18n/locales/zh-CN/settings.json
+++ b/webview-ui/src/i18n/locales/zh-CN/settings.json
@@ -436,6 +436,10 @@
 			"name": "启用增强导向模式",
 			"description": "开启后，Kilo Code 将更频繁地向模型推送当前模式定义的详细信息，从而强化对角色设定和自定义指令的遵循力度。注意：此模式会提升每条消息的 token 消耗量。"
 		},
+		"REFACTOR_CODE": {
+			"name": "启用实验性代码重构工具",
+			"description": "启用后，Kilo Code 将为 LLM 提供 refactor_code 工具，可加速代码重构操作。目前仅支持 Typescript/Javascript。"
+		},
 		"MULTI_SEARCH_AND_REPLACE": {
 			"name": "允许批量搜索和替换",
 			"description": "启用后，Kilo Code 将尝试在一个请求中进行批量搜索和替换。"
