--- a/webview-ui/src/i18n/locales/ca/settings.json
+++ b/webview-ui/src/i18n/locales/ca/settings.json
@@ -435,6 +435,10 @@
 			"name": "Utilitzar mode \"direcció assistida\" experimental",
 			"description": "Quan està activat, Kilo Code recordarà al model els detalls de la seva definició de mode actual amb més freqüència. Això portarà a una adherència més forta a les definicions de rol i instruccions personalitzades, però utilitzarà més tokens per missatge."
 		},
+		"REFACTOR_CODE": {
+			"name": "Activar l'eina de refactorització de codi experimental",
+			"description": "Quan està activat, Kilo Code proporciona al LLM una eina refactor_code que pot accelerar les operacions de refactorització. Només per a Typescript/Javascript per ara."
+		},
 		"MULTI_SEARCH_AND_REPLACE": {
 			"name": "Utilitzar eina diff de blocs múltiples experimental",
 			"description": "Quan està activat, Kilo Code utilitzarà l'eina diff de blocs múltiples. Això intentarà actualitzar múltiples blocs de codi a l'arxiu en una sola petició."
