--- a/webview-ui/src/i18n/locales/en/settings.json
+++ b/webview-ui/src/i18n/locales/en/settings.json
@@ -435,6 +435,10 @@
 			"name": "Use experimental \"power steering\" mode",
 			"description": "When enabled, Kilo Code will remind the model about the details of its current mode definition more frequently. This will lead to stronger adherence to role definitions and custom instructions, but will use more tokens per message."
 		},
+		"REFACTOR_CODE": {
+			"name": "Enable experimental refactor_code tool",
+			"description": "When enabled, Kilo Code provides the LLM a refactor_code tool that can speed-up refactoring operations. Typescript/Javascript only for now."
+		},
 		"MULTI_SEARCH_AND_REPLACE": {
 			"name": "Use experimental multi block diff tool",
 			"description": "When enabled, Kilo Code will use multi block diff tool. This will try to update multiple code blocks in the file in one request."
