--- a/webview-ui/src/i18n/locales/it/settings.json
+++ b/webview-ui/src/i18n/locales/it/settings.json
@@ -435,6 +435,10 @@
 			"name": "Usa modalità \"servosterzo\" sperimentale",
 			"description": "Quando abilitato, Kilo Code ricorderà al modello i dettagli della sua definizione di modalità corrente più frequentemente. Questo porterà a una maggiore aderenza alle definizioni dei ruoli e alle istruzioni personalizzate, ma utilizzerà più token per messaggio."
 		},
+		"REFACTOR_CODE": {
+			"name": "Abilita strumento refactor_code sperimentale",
+			"description": "Quando abilitato, Kilo Code fornisce al LLM uno strumento refactor_code che può velocizzare le operazioni di refactoring. Solo per Typescript/Javascript per ora."
+		},
 		"MULTI_SEARCH_AND_REPLACE": {
 			"name": "Usa strumento diff multi-blocco sperimentale",
 			"description": "Quando abilitato, Kilo Code utilizzerà lo strumento diff multi-blocco. Questo tenterà di aggiornare più blocchi di codice nel file in una singola richiesta."
