Add missing translations

--- a/webview-ui/src/i18n/locales/ca/kilocode.json
+++ b/webview-ui/src/i18n/locales/ca/kilocode.json
@@ -17,6 +17,11 @@
 	"settings": {
 		"sections": {
 			"mcp": "Servidors MCP"
+		},
+		"provider": {
+			"apiKey": "Clau API de Kilo Code",
+			"login": "Iniciar sessió a Kilo Code",
+			"logout": "Tancar sessió de Kilo Code"
 		}
 	},
 	"profile": {
