--- a/webview-ui/src/i18n/locales/de/kilocode.json
+++ b/webview-ui/src/i18n/locales/de/kilocode.json
@@ -17,6 +17,11 @@
 	"settings": {
 		"sections": {
 			"mcp": "MCP-Server"
+		},
+		"provider": {
+			"apiKey": "Kilo Code API-Schlüssel",
+			"login": "Bei Kilo Code anmelden",
+			"logout": "Von Kilo Code abmelden"
 		}
 	},
 	"chat": {
