--- a/webview-ui/src/i18n/locales/es/kilocode.json
+++ b/webview-ui/src/i18n/locales/es/kilocode.json
@@ -17,6 +17,11 @@
 	"settings": {
 		"sections": {
 			"mcp": "Servidores MCP"
+		},
+		"provider": {
+			"apiKey": "Clave API de Kilo Code",
+			"login": "Iniciar sesión en Kilo Code",
+			"logout": "Cerrar sesión de Kilo Code"
 		}
 	},
 	"chat": {
