--- a/webview-ui/src/i18n/locales/it/kilocode.json
+++ b/webview-ui/src/i18n/locales/it/kilocode.json
@@ -17,6 +17,11 @@
 	"settings": {
 		"sections": {
 			"mcp": "Server MCP"
+		},
+		"provider": {
+			"apiKey": "Chiave API Kilo Code",
+			"login": "Accedi a Kilo Code",
+			"logout": "Disconnetti da Kilo Code"
 		}
 	},
 	"chat": {
