--- a/webview-ui/src/i18n/locales/ja/kilocode.json
+++ b/webview-ui/src/i18n/locales/ja/kilocode.json
@@ -17,6 +17,11 @@
 	"settings": {
 		"sections": {
 			"mcp": "MCPサーバー"
+		},
+		"provider": {
+			"apiKey": "Kilo Code APIキー",
+			"login": "Kilo Codeにログイン",
+			"logout": "Kilo Codeからログアウト"
 		}
 	},
 	"chat": {
