--- a/webview-ui/src/i18n/locales/ko/kilocode.json
+++ b/webview-ui/src/i18n/locales/ko/kilocode.json
@@ -17,6 +17,11 @@
 	"settings": {
 		"sections": {
 			"mcp": "MCP 서버"
+		},
+		"provider": {
+			"apiKey": "Kilo Code API 키",
+			"login": "Kilo Code에 로그인",
+			"logout": "Kilo Code에서 로그아웃"
 		}
 	},
 	"chat": {
