--- a/webview-ui/src/i18n/locales/ru/kilocode.json
+++ b/webview-ui/src/i18n/locales/ru/kilocode.json
@@ -17,6 +17,11 @@
 	"settings": {
 		"sections": {
 			"mcp": "MCP Серверы"
+		},
+		"provider": {
+			"apiKey": "API-ключ Kilo Code",
+			"login": "Войти в Kilo Code",
+			"logout": "Выйти из Kilo Code"
 		}
 	},
 	"chat": {
