--- a/webview-ui/src/i18n/locales/zh-TW/kilocode.json
+++ b/webview-ui/src/i18n/locales/zh-TW/kilocode.json
@@ -17,6 +17,11 @@
 	"settings": {
 		"sections": {
 			"mcp": "MCP 伺服器"
+		},
+		"provider": {
+			"apiKey": "Kilo Code API 金鑰",
+			"login": "登入 Kilo Code",
+			"logout": "登出 Kilo Code"
 		}
 	},
 	"chat": {
